Introduce ResultFilter to control inclusion of NetworkResult based on limit violation filtering criteria.